--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     <h2>프로젝트</h2>
     <p>제가 진행했던 건축 프로젝트와 작업물을 모아둔 공간입니다.</p>
     <ul>
-      <li>🏛 두곡고택 공간 분석</li>
-      <li>🏢 도시재생 서포터즈 활동 기록</li>
-      <li>🏟 야구 갤러리 전시 공간 기획안</li>
+      <li>🏛 2학년 1학기 주택설계</li>
+      <li>🏢 뮤지엄산 분석및모델</li>
+      <li>🏟 2학년2학기 갤러리 설계</li>
     </ul>
   </section>
 
@@ -89,3 +89,4 @@
   </footer>
 </body>
 </html>
+
