--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <div>SJ</div>
       <div>
         <h1 style="font-size:1rem; margin:0;">성진 박 — Architecture Portfolio</h1>
-        <p style="margin:0; font-size:0.8rem; color:#64748b;">건축 / 디자인 / 프로젝트 모음</p>
+        <p style="margin:0; font-size:0.8rem; color:#64748b;">설계스튜디오 프로젝트 모음</p>
       </div>
     </div>
     <nav>
@@ -146,28 +146,28 @@
       <div class="project-card">
         <img src="images/project-a-cover.jpg" alt="작업 A 대표 이미지" />
         <div class="info">
-          <h3 style="margin:0;">작업 A — 소형 주택 리노베이션</h3>
-          <p style="font-size:0.8rem; color:#64748b;">2024 · 주거 · 85m²</p>
+          <h3 style="margin:0;">2학년 1학기 주택설계</h3>
+          <p style="font-size:0.8rem; color:#64748b;">2025 · 주거 · 244m²</p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
-            프라이버시를 지키는 방패형 메스. 작은 부지에서 쾌적한 실내환경 구현.
+            계단을 싫어하는 사람의 램프와 프라이버시 주택
           </p>
         </div>
       </div>
       <div class="project-card">
-        <img src="images/project-b-cover.jpg" alt="작업 B 대표 이미지" />
+        <img src="images/project-b-cover.jpg" alt="뮤지엄산 대표 이미지" />
         <div class="info">
-          <h3 style="margin:0;">작업 B — 공공 전시장</h3>
-          <p style="font-size:0.8rem; color:#64748b;">2023 · 공공 · 240m²</p>
+          <h3 style="margin:0;">2학년 2학기 — 공공 전시장</h3>
+          <p style="font-size:0.8rem; color:#64748b;">2025 · 뮤지엄산 스터디 </p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
-            전시 동선 최적화와 가변형 조명, 저예산 재료 활용.
+            뮤지엄산 스터디 및 사진
           </p>
         </div>
       </div>
       <div class="project-card">
-        <img src="images/project-c-cover.jpg" alt="작업 C 대표 이미지" />
+        <img src="images/project-c-cover.jpg" alt="갤러리 대표 이미지" />
         <div class="info">
-          <h3 style="margin:0;">작업 C — 스터디 하우스</h3>
-          <p style="font-size:0.8rem; color:#64748b;">2022 · 상업 · 120m²</p>
+          <h3 style="margin:0;">2학년 2학기 갤러리 설계 — </h3>
+          <p style="font-size:0.8rem; color:#64748b;">2025 · 상업 · </p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
             커뮤니티 중심 소규모 상업공간. 친환경 마감재 사용.
           </p>
@@ -181,7 +181,7 @@
     <div class="card">
       <h3 style="font-size:1.25rem; font-weight:bold;">About / 소개</h3>
       <p style="margin-top:0.5rem; color:#475569;">
-        안녕하세요. 저는 건축을 전공하는 학생(또는 실무자)입니다. 작업과 프로젝트를 정리해두었습니다.
+        건축학도의 포트 폴리오 
       </p>
       <ul style="margin-top:0.5rem; font-size:0.9rem; color:#475569;">
         <li>• 프로젝트별 핵심: 개념 / 공간 구성 / 재료 / 조명</li>
@@ -209,6 +209,8 @@
 
 </body>
 </html>
+
+
 
 
 
