--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <h3 style="margin:0;">2학년 2학기 갤러리 설계 — </h3>
           <p style="font-size:0.8rem; color:#64748b;">2025 · 상업 · </p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
-            커뮤니티 중심 소규모 상업공간. 친환경 마감재 사용.
+            야구 갤러리,타임리프
           </p>
         </div>
       </div>
@@ -209,6 +209,7 @@
 
 </body>
 </html>
+
 
 
 
