--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>성진 박 — Architecture Portfolio</title>
+  <title>SUNGJIN PARK — Architecture Portfolio</title>
   <style>
     body {
       margin: 0;
@@ -126,7 +127,7 @@
       <div>
         <h2>작업을 개념부터 기록까지<br/>한 곳에 모아두세요</h2>
         <p style="margin-top:0.5rem; color:#475569;">
-          프로젝트 설명, 평면도, 모형사진, 시공사진, 보고서를 업로드해 전시형 포트폴리오를 만드세요.
+          프로젝트 설명, 평면도, 모형사진,  보고서를 업로드해 전시형 포트폴리오를 만드세요.
         </p>
         <div style="margin-top:1rem;">
           <a href="#projects" class="btn btn-dark">작업 보러가기</a>
@@ -149,7 +150,7 @@
           <h3 style="margin:0;">2학년 1학기 주택설계</h3>
           <p style="font-size:0.8rem; color:#64748b;">2025 · 주거 · 244m²</p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
-            계단을 싫어하는 사람의 램프와 프라이버시 주택
+           램프와 프라이버시 주택
           </p>
         </div>
       </div>
@@ -166,10 +167,10 @@
       <div class="project-card">
         <img src="images/project-c-cover.jpg" alt="갤러리 대표 이미지" />
         <div class="info">
-          <h3 style="margin:0;">2학년 2학기 갤러리 설계 — </h3>
-          <p style="font-size:0.8rem; color:#64748b;">2025 · 상업 · </p>
+          <h3 style="margin:0;">2학년 2학기 갤러리 설계</h3>
+          <p style="font-size:0.8rem; color:#64748b;">2025 · 상업</p>
           <p style="font-size:0.9rem; margin-top:0.5rem;">
-            야구 갤러리,타임리프
+            야구 갤러리
           </p>
         </div>
       </div>
@@ -181,7 +182,8 @@
     <div class="card">
       <h3 style="font-size:1.25rem; font-weight:bold;">About / 소개</h3>
       <p style="margin-top:0.5rem; color:#475569;">
-        건축학도의 포트 폴리오 
+        건축학도의 포트폴리오입니다.  
+        설계 스튜디오 프로젝트들을 정리하고 공유합니다.
       </p>
       <ul style="margin-top:0.5rem; font-size:0.9rem; color:#475569;">
         <li>• 프로젝트별 핵심: 개념 / 공간 구성 / 재료 / 조명</li>
@@ -209,6 +211,7 @@
 
 </body>
 </html>
+
 
 
 
