--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>성진 박 — Architecture Portfolio</title>
+  <title>SUNGJIN PARK — Architecture Portfolio</title>
   <style>
     /* Reset & base */
     *, *::before, *::after { box-sizing: border-box; }
@@ -270,6 +270,7 @@
   </div>
 </body>
 </html>
+
 
 
 
