--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <article class="project-card">
           <img src="images/project-b-cover.jpg" alt="뮤지엄산 스터디 대표 이미지" loading="lazy" />
           <div class="info">
-            <h3>2학년 2학기 — 공공 전시장</h3>
+            <h3>2학년 2학기 — 뮤지엄산 스터디</h3>
             <div class="sub">2025 · 뮤지엄산 스터디</div>
             <p style="margin:0; color:#475569; font-size:0.95rem;">뮤지엄산 스터디 및 사진</p>
           </div>
@@ -270,6 +270,7 @@
   </div>
 </body>
 </html>
+
 
 
 
