--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
           <img src="images/project-c-cover.jpg" alt="갤러리 대표 이미지" loading="lazy" />
           <div class="info">
             <h3>2학년 2학기 갤러리 설계</h3>
-            <div class="sub">2025 · 상업</div>
+            <div class="sub">2025 · 미술관</div>
             <p style="margin:0; color:#475569; font-size:0.95rem;">야구 갤러리</p>
           </div>
         </article>
@@ -242,7 +242,7 @@
         <h3 style="margin:0 0 0.5rem 0; font-size:1.05rem;">About / 소개</h3>
         <p style="margin:0 0 0.75rem 0; color:#475569;">건축학도의 포트폴리오입니다. 설계 스튜디오 프로젝트들을 정리하고 공유합니다.</p>
         <ul style="margin:0; color:#475569;">
-          <li>• 프로젝트별 핵심: 개념 / 공간 구성 / 재료 / 조명</li>
+          <li>• 프로젝트별 핵심: 개념 / 공간 구성 / 재료 </li>
           <li>• 이미지 권장: 너비 1600px 이상, JPG/WEBP 압축</li>
           <li>• 파일명 규칙: YYYY-프로젝트명-번호.jpg</li>
         </ul>
@@ -254,7 +254,7 @@
       <div class="card two-col">
         <div>
           <h4 style="margin:0 0 0.5rem 0;">Contact</h4>
-          <p style="margin:0 0 1rem 0; color:#475569;">포트폴리오 수정 문의가 있다면 아래로 연락.</p>
+          <p style="margin:0 0 1rem 0; color:#475569;">포트폴리오 수정 문의가 있다면 Email 보내기기.</p>
           <a href="mailto:your.email@example.com" class="btn btn-light">Email 보내기</a>
         </div>
         <form style="display:flex; flex-direction:column; gap:0.5rem;">
@@ -270,6 +270,7 @@
   </div>
 </body>
 </html>
+
 
 
 
